tmp/wrong_1640056201.890032.txt
identifier 'av_cold'	 [StartOfLine]	Loc=<./tmp/code_3.c:1:1>
void 'void'	 [LeadingSpace]	Loc=<./tmp/code_3.c:1:9>
identifier 'ff_blockdsp_init_x86'	 [LeadingSpace]	Loc=<./tmp/code_3.c:1:14>
l_paren '('		Loc=<./tmp/code_3.c:1:34>
identifier 'BlockDSPContext'		Loc=<./tmp/code_3.c:1:35>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_3.c:1:51>
identifier 'c'		Loc=<./tmp/code_3.c:1:52>
comma ','		Loc=<./tmp/code_3.c:1:53>
identifier 'AVCodecContext'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_3.c:3:35>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_3.c:3:50>
identifier 'avctx'		Loc=<./tmp/code_3.c:3:51>
r_paren ')'		Loc=<./tmp/code_3.c:3:56>
./tmp/code_3.c:5:2: error: #else without #if
#else
 ^
identifier 'av_cold'	 [StartOfLine]	Loc=<./tmp/code_3.c:7:1>
void 'void'	 [LeadingSpace]	Loc=<./tmp/code_3.c:7:9>
identifier 'ff_blockdsp_init_x86'	 [LeadingSpace]	Loc=<./tmp/code_3.c:7:14>
l_paren '('		Loc=<./tmp/code_3.c:7:34>
identifier 'BlockDSPContext'		Loc=<./tmp/code_3.c:7:35>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_3.c:7:51>
identifier 'c'		Loc=<./tmp/code_3.c:7:52>
r_paren ')'		Loc=<./tmp/code_3.c:7:53>
./tmp/code_3.c:9:2: error: #endif without #if
#endif /* FF_API_XVMC */
 ^
l_brace '{'	 [StartOfLine]	Loc=<./tmp/code_3.c:11:1>
r_brace '}'	 [StartOfLine]	Loc=<./tmp/code_3.c:55:1>
eof ''		Loc=<./tmp/code_3.c:55:2>
2 errors generated.
